Thu May 21 23:55:14 1998  Per Bothner  <bothner@cygnus.com>

	* characters.scm:  Use <TYPE> rather than "TYPE" specifications.

	* reflection.scm:  A Record Type Descriptor is now a ClassType,
	rather than a Class.

	* syntax.scm (defmacro):  Inline call to %defmacro.

Tue Apr 28 21:53:13 1998  Per Bothner  <bothner@cygnus.com>

	* ports.scm (port-line, port-column): Make port argument required.

Sat Apr  4 21:10:56 1998  Per Bothner  <bothner@cygnus.com>

	* misc.scm (scheme-implementation-version):  Re-implement to use
	kawa.Version.getVersion, instead of Makefile magic.
	* port.scm (port-line, port-column, set-port-line!):  New.
	* std_syntax.scm (and):  New syntax (taken from R5RS).
	* Makefile.am:  Re-write to compile all out-of-date *.java at once.

Tue Mar 10 22:05:31 1998  Per Bothner  <bothner@cygnus.com>

	* reflection:  Use constant-fold.  Use <String> instead of <symbol>.
	* system.scm:  New procedures.
	* Makefile.am, Makefile.in:  Add system.class.

Tue Mar  3 17:49:13 1998  Per Bothner  <bothner@cygnus.com>

	* reflection.scm (primitive-array-get, primitive-array-set,
	primitive-array-new, primitive-array-length,
	primitive-get-field, primitive-set-field, primitive-get-static,
	primitive-set-static):  New procedures.

Wed Feb 18 22:14:57 1998  Per Bothner  <bothner@cygnus.com>

	* ports.scm (input-port-column-number):  Fix parenthesis error.

Mon Feb 16 17:15:21 1998  Per Bothner  <bothner@cygnus.com>

	* ports.scm (input-port?, output-port?, call-with-input-string):
	These are now here, written in Scheme.
	* Makefile.am, Makefile.in (SECONDARY_OBJS): Update for new procedures.

Fri Feb  6 17:24:02 1998  Per Bothner  <bothner@cygnus.com>

	* misc.scm (scheme-window):  New procedure.
	* Makefile.am, Makefile.in:  Update.

Tue Feb  3 16:41:25 1998  Per Bothner  <bothner@cygnus.com>

	* numbers.scm:  New file with lots of procedures.
	* characters.scm (char?):  New procedure.
	* vectors.scm (vector?):  New procedure.