@@ -11,10 +11,34 @@
   ((primitive-virtual-method <string> "copy" <string> (<int> <int>))
    str start end))
 
-(define (string-copy! str)
+(define (string-copy str)
   ((primitive-virtual-method <string> "copy" <string> ())
    str))
 
 (define (string-fill! str ch)
   ((primitive-virtual-method <string> "fill" <void> (<char>))
    str ch))
+
+(define (string-upcase! str)
+  ((primitive-virtual-method <string> "makeUpperCase" <void> ())
+   str)
+  str)
+
+(define (string-downcase! str)
+  ((primitive-virtual-method <string> "makeLowerCase" <void> ())
+   str)
+  str)
+
+(define (string-capitalize! str)
+  ((primitive-virtual-method <string> "makeCapitalize" <void> ())
+   str)
+  str)
+
+(define (string-upcase str)
+  (string-upcase! (string-copy str)))
+
+(define (string-downcase str)
+  (string-downcase! (string-copy str)))
+
+(define (string-capitalize str)
+  (string-capitalize! (string-copy str)))
